k8s/estoque-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: estoque-service

spec:
  type: NodePort

  selector:
    app: estoque

  ports:
  - port: 3003
    targetPort: 3003
    nodePort: 30003
