k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loja-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: loja.local
    http:
      paths:

      - path: /pedidos
        pathType: Prefix
        backend:
          service:
            name: pedidos-service
            port:
              number: 3001

      - path: /pagamentos
        pathType: Prefix
        backend:
          service:
            name: pagamentos-service
            port:
              number: 3002

      - path: /estoque
        pathType: Prefix
        backend:
          service:
            name: estoque-service
            port:
              number: 3003
